fix: fix sticker overlapping navbar

--- a/src/app/components/Sticker/Sticker.scss
+++ b/src/app/components/Sticker/Sticker.scss
@@ -1,7 +1,7 @@
 .sticker {
   $hide-breakpoint: 800px;
   position: absolute;
-  z-index: 5;
+  z-index: 2;
   scale: 0.65;
 
   &.hide-mobile {
